Added more comments for easier understanding

--- a/notebooks/Economic_impact.ipynb
+++ b/notebooks/Economic_impact.ipynb
@@ -201,6 +201,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Observation**\n",
+    "- Inverse Relationship: The chart suggests a negative correlation between natural gas storage levels and prices. This means that as natural gas storage levels increase, the price tends to decrease, and vice versa.\n",
+    "\n",
+    "**Interpretation:**\n",
+    "- When natural gas storage levels are high, it indicates a surplus of supply. This excess supply can lead to lower prices as suppliers may need to discount their product to encourage demand. Conversely, when storage levels are low, it indicates a potential shortage of supply. This can lead to higher prices as demand outstrips supply.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -218,6 +229,14 @@
    ],
    "source": [
     "plots.compare_indicator_price('US Average Hourly Earnings m/m', price_with_indicators,2012)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Observation**\n",
+    "- As Us Average Hour earnings decrease we can see that the oil price decreases"
    ]
   },
   {
@@ -241,6 +260,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Observation:**\n",
+    "- Inverse Relationship: There seems to be a negative correlation between crude oil inventories and price. This means that as inventories increase, the price tends to decrease, and vice versa.\n",
+    "\n",
+    "**Interpretation:**\n",
+    "- When crude oil inventories are high, it indicates a surplus of supply. This excess supply can lead to lower prices as suppliers may need to discount their product to encourage demand. Conversely, when inventories are low, it signals a potential shortage of supply. This can lead to higher prices as demand outstrips supply.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
@@ -258,6 +288,17 @@
    ],
    "source": [
     "plots.compare_indicator_price('US Factory Orders m/m', price_with_indicators,2010)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Observatoin**\n",
+    "- Potential Positive Correlation: While not perfectly aligned, there seems to be a weak positive correlation between the two series. This means that when factory orders increase, the price tends to increase as well, and vice versa. \n",
+    "\n",
+    "**Possible Explanations:**\n",
+    "- Demand and Supply Dynamics: Increased factory orders often indicate higher demand for goods. This increased demand can lead to higher prices, particularly if supply cannot keep up with demand."
    ]
   },
   {
@@ -281,6 +322,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Observation**\n",
+    "- Weak Correlation: While there are periods where both series seem to move in the same direction, the overall correlation between the two is weak. This suggests that the relationship between GDP growth and price levels is complex and influenced by various factors."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
@@ -298,6 +347,14 @@
    ],
    "source": [
     "plots.compare_indicator_price('US Core CPI m/m', price_with_indicators,2010, full_year = True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Observation**\n",
+    "- Positive Correlation: There seems to be a positive correlation between the two series. This means that when the Core CPI m/m increases (indicating higher inflation), the price index also tends to increase, and vice versa."
    ]
   }
  ],
