--- a/notebooks/changePointAnalysis.ipynb
+++ b/notebooks/changePointAnalysis.ipynb
@@ -11,6 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Change point analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Importing necessary libraries"
    ]
   },
@@ -113,6 +120,35 @@
    ],
    "source": [
     "plots.plot_changePoint_with_event(data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Observation**\n",
+    "**Geopolitical Events:**\n",
+    "\n",
+    "- **1999-10-01: OPEC production cuts take effect:** This event likely led to a price increase as reduced supply would drive up prices.\n",
+    "- **2004-07-01: Hurricane Ivan impacts U.S. production**: This event would likely lead to a price increase due to supply disruptions.\n",
+    "- **2005-08-01: Hurricane Katrina causes severe supply disruptions:** Similar to Hurricane Ivan, this event would lead to a price increase.\n",
+    "- **2011-01-03: Political unrest in the Middle East (Arab Spring):** This event, affecting a major oil-producing region, would lead to a price increase due to supply concerns.\n",
+    "- **2014-10-01: OPEC decides not to cut production:** This decision could lead to a price decrease due to oversupply.\n",
+    "- **2022-01-03: Geopolitical tensions over Ukraine:** This event would likely lead to a price increase due to supply concerns and uncertainty in the global energy market.\n",
+    "\n",
+    "**Economic Events:**\n",
+    "\n",
+    "- **2008-04-01: Global financial crisis begins affecting demand:** This event would lead to a price decrease due to reduced demand.\n",
+    "- **2008-10-01: Economic downturn leads to reduced demand:** This event would further contribute to a price decrease.\n",
+    "- **2009-04-01: Early signs of economic recovery:** This event could lead to a price increase as demand starts to recover.\n",
+    "- **2015-01-02: Oil price crash due to oversupply:** This event would lead to a price decrease.\n",
+    "- **2015-10-01: Global economic concerns affect demand:** This event would lead to a price decrease.\n",
+    "- **2017-07-03: Increased U.S. inventories impact prices:** This event would likely lead to a price decrease due to oversupply.\n",
+    "- **2020-04-01: COVID-19 pandemic leads to historic price drop:** This event would lead to a significant price decrease due to reduced demand and supply chain disruptions.\n",
+    "- **2020-07-01: Recovery in demand as economies reopen:** This event would lead to a price increase as demand recovers.\n",
+    "- **2021-01-04: Vaccine rollout boosts global economic outlook:** This event would lead to a price increase as economic activity and demand for oil increase.\n",
+    "\n",
+    "* By understanding the nature of these events and their impact on oil supply and demand, we can better interpret historical oil price movements and potentially make informed predictions about future trends."
    ]
   }
  ],
