Added notebook for LSTM model

--- a/notebooks/Lstm.ipynb
+++ b/notebooks/Lstm.ipynb
@@ -470,6 +470,15 @@
    "source": [
     "plot_metrics('params.yaml')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Observation:**\n",
+    "\n",
+    "- The training mean squared error, RMSE, MAE and loss decreases rapidly in the initial epochs, indicating that the model is learning quickly."
+   ]
   }
  ],
  "metadata": {
